	* Gonryunn Quests - 0% - Botting on official Servers
	* Artifacts of God (MRO GOD ITEM QUESTS) - 1% - resources only from MRO Official
	  guide book so, probably unofficial
	* Level 4 forge (MRO Lvl 4 Forging Quest) - 1% - resources only from MRO Official
	  guide book so, probably unofficial

TODO:
	* Redo all NPCs to work with BABY CLASSES.

== Changelog ==

Date		Added
======
06/22
	* Added baby support to Dancer quest [Fredzilla]
06/21
	* Fixed a wrong required item in Sea Otter Hat quest, thanks to frugal [DracoRPG]
06/18
	* Updated Lightharzen warps to Sara-chan's v1.2 [Lupus]
06/16
	* Added Sara-chan's Lightharzen warps [celest]
06/13
	* Fixed Heart of Ymir location/sprite, thanks to Poki#3 [DracoRPG]
06/10
	* Fixed small error in Dye_maker, was trying to del an non-existant item, instead on mixture 
	  Thank you Terminal Vertex
06/05
	* Fixed another error [Lunatikbunnie]
06/03
	* Fixed an error in the jobmaster script [DracoRPG]
06/02
	* Corrected error in Jfunc under priests [massdriller]
06/01
	* Added Field update - Einbroch and Lhztargen thanks to sara [massdriller]
	* Added New optimised jobchanger [Lunatikbunnie]
05/31
	* Added my own dev npc too [massdriller]
	* Fixed incorrect checkers for Jfunc2-1 [massdriller]
	* Fixed a typo in Jfunc1-1 [massdriller]
	* Added my own devnpc =P [Kevin]
	* Optimised darkchild's MVP arena [massdriller]
05/30
	* Scripts reorganizing [DracoRPG]
	* Changed swordsman -> swordman in the files names [DracoRPG]
	* Optimised Job Quests by placing checkers into JFunc1-1 [massdriller]
	- Acolyte, Archer, Mage, Merchant, Thief, Swordsman
	* Optimised Job Quests by placing checkers into JFunc2-1 [massdriller]
	- Assassin, Blacksmith, Hunter, Knight, Priest, Wizard
	* Optimised Job Quests by placing checkers into JFunc2-2 [massdriller]
	- Monk, Sage, Rogue
	- The rest can't be optimised as it is too integrated.
05/29
	* Fixed a typo in an NPC [Codemaster]