@@ -343,7 +343,6 @@ enum {
 	GD_APPROVAL=10000,
 	GD_KAFRACONTRACT=10001,
 	GD_GUARDIANRESEARCH=10002,
-	GD_CHARISMA=10003,
 	GD_GUARDUP=10003,
 	GD_EXTENSION=10004,
 	GD_GLORYGUILD=10005,
